--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -r https://github.com/palpitate2034/shop-client.git -b gh-pages"
+    "deploy": "gh-pages -d dist -r https://github.com/palpitate2034/shop-client.git -b gh-page"
   },
   "dependencies": {
     "axios": "^1.1.2",
